<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_gravity="center_vertical"
    android:background="@color/dialog_container">


    <Button
        android:id="@+id/btn_dialog_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/work_sans_semibold"
        android:text="@string/ok"
        android:textColor="@color/dialog_btn_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_content" />

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/work_sans_bold"
        android:text="@string/title"
        android:textColor="@color/dialog_title_text"
        android:textSize="21sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dialog_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/work_sans"
        android:text="TextView"
        android:textColor="@color/dialog_support_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title" />

    <Button
        android:id="@+id/btn_dialog_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/work_sans_semibold"
        android:text="@string/cancel"
        android:textColor="@color/dialog_btn_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dialog_right"
        app:layout_constraintEnd_toStartOf="@+id/btn_dialog_right" />

</androidx.constraintlayout.widget.ConstraintLayout>